Perfect Reel PNG alignment to match reference logo

--- a/index.html
+++ b/index.html
@@ -1015,54 +1015,54 @@
 
         /* Reel Image Styling - Premium positioning and sizing */
         .reel-img {
-            height: 0.8em !important;
+            height: 0.7em !important;
             width: auto !important;
             vertical-align: baseline;
             display: inline-block;
-            margin-right: 0.1em;
+            margin-right: 0.08em;
             position: relative;
-            top: 0.08em; /* Fine-tune vertical alignment */
+            top: 0.15em; /* Lower the image to sit on baseline */
         }
 
         /* Hero section specific adjustments */
         .hero h1 .reel-img {
-            height: 0.88em !important;
-            top: 0.05em;
-            margin-right: 0.15em;
+            height: 0.75em !important;
+            top: 0.12em;
+            margin-right: 0.1em;
         }
 
         /* Preloader specific */
         .preloader-logo .reel-img {
-            height: 0.95em !important;
-            top: 0.03em;
-            margin-right: 0.08em;
+            height: 0.8em !important;
+            top: 0.1em;
+            margin-right: 0.05em;
         }
 
         /* Pillar cards */
         h3 .reel-img {
-            height: 0.82em !important;
-            top: 0.06em;
-            margin-right: 0.12em;
+            height: 0.7em !important;
+            top: 0.12em;
+            margin-right: 0.08em;
         }
 
         /* Navigation menu */
         .nav-menu a .nav-reel-img {
-            height: 0.75em !important;
-            top: 0.05em;
-            margin-right: 0.1em;
+            height: 0.65em !important;
+            top: 0.1em;
+            margin-right: 0.08em;
         }
 
         /* Footer adjustments */
         .footer-brand h3 .reel-img {
-            height: 0.85em !important;
-            top: 0.04em;
-            margin-right: 0.08em;
+            height: 0.72em !important;
+            top: 0.1em;
+            margin-right: 0.05em;
         }
 
         .footer-links a .footer-reel-img {
-            height: 0.75em !important;
-            top: 0.04em;
-            margin-right: 0.08em;
+            height: 0.65em !important;
+            top: 0.08em;
+            margin-right: 0.06em;
         }
 
         /* Responsive */
