Update reel logo styling for premium cohesive look across all sections

--- a/index.html
+++ b/index.html
@@ -502,6 +502,7 @@
             align-items: baseline;
             justify-content: center;
             gap: 0;
+            letter-spacing: -0.01em;
         }
 
         .hero h1 .word {
@@ -526,6 +527,7 @@
         .hero .mediahq {
             color: var(--gold);
             position: relative;
+            font-weight: 600;
         }
 
         .hero-subtitle {
@@ -1015,54 +1017,54 @@
 
         /* Reel Image Styling - Premium positioning and sizing */
         .reel-img {
-            height: 0.9em !important;
+            height: 1.15em !important;
             width: auto !important;
             vertical-align: baseline;
             display: inline-block;
-            margin-right: 0.02em;
+            margin-right: -0.08em;
             position: relative;
-            top: 0.15em; /* Lower the image to sit on baseline */
+            top: 0.02em;
         }
 
         /* Hero section specific adjustments */
         .hero h1 .reel-img {
-            height: 0.95em !important;
-            top: 0.12em;
-            margin-right: 0.05em;
+            height: 1.2em !important;
+            top: 0;
+            margin-right: -0.1em;
         }
 
         /* Preloader specific */
         .preloader-logo .reel-img {
-            height: 1em !important;
-            top: 0.1em;
-            margin-right: 0.02em;
+            height: 1.25em !important;
+            top: 0;
+            margin-right: -0.1em;
         }
 
         /* Pillar cards */
         h3 .reel-img {
-            height: 0.88em !important;
-            top: 0.12em;
-            margin-right: 0.02em;
+            height: 1.1em !important;
+            top: 0.02em;
+            margin-right: -0.05em;
         }
 
         /* Navigation menu */
         .nav-menu a .nav-reel-img {
-            height: 0.85em !important;
-            top: 0.1em;
-            margin-right: 0.02em;
+            height: 1.1em !important;
+            top: 0;
+            margin-right: -0.08em;
         }
 
         /* Footer adjustments */
         .footer-brand h3 .reel-img {
-            height: 0.92em !important;
-            top: 0.1em;
-            margin-right: 0.02em;
+            height: 1.15em !important;
+            top: 0;
+            margin-right: -0.08em;
         }
 
         .footer-links a .footer-reel-img {
-            height: 0.85em !important;
-            top: 0.08em;
-            margin-right: 0.02em;
+            height: 1em !important;
+            top: 0.02em;
+            margin-right: -0.05em;
         }
 
         /* Responsive */
@@ -1155,7 +1157,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="scoop.html"><img src="reel-text-light.png" alt="Reel" class="nav-reel-img">&nbsp;Scoop</a></li>
                     <li><a href="strategy.html"><img src="reel-text-light.png" alt="Reel" class="nav-reel-img">&nbsp;Strategy</a></li>
-                    <li><a href="studio.html"><img src="reel-text-light.png" alt="Reel" class="nav-reel-img" style="margin-right: -0.15em;"><span style="letter-spacing: -0.02em;">verse&nbsp;Studio</span></a></li>
+                    <li><a href="studio.html"><img src="reel-text-light.png" alt="Reel" class="nav-reel-img" style="margin-right: -0.12em;"><span style="letter-spacing: -0.03em;">verse&nbsp;Studio</span></a></li>
                 </ul>
             </nav>
             <div class="nav-info">
@@ -1234,7 +1236,7 @@
                     <div class="pillar-icon">
                         <span>🎬</span>
                     </div>
-                    <h3><img src="reel-text.png" alt="Reel" class="reel-img" style="margin-right: -0.15em;"><span class="gold-text" style="letter-spacing: -0.02em;">verse&nbsp;Studio</span></h3>
+                    <h3><img src="reel-text.png" alt="Reel" class="reel-img" style="margin-right: -0.12em;"><span class="gold-text" style="letter-spacing: -0.03em;">verse&nbsp;Studio</span></h3>
                     <p>Creative experiments exploring the future of storytelling, interactivity, and intelligent media. Where new ideas come to life.</p>
                     <a href="studio.html" class="pillar-cta">
                         <span>Explore</span>
@@ -1262,7 +1264,7 @@
                 <ul class="footer-links">
                     <li><a href="scoop.html"><img src="reel-text-light.png" alt="Reel" class="footer-reel-img">&nbsp;Scoop</a></li>
                     <li><a href="strategy.html"><img src="reel-text-light.png" alt="Reel" class="footer-reel-img">&nbsp;Strategy</a></li>
-                    <li><a href="studio.html"><img src="reel-text-light.png" alt="Reel" class="footer-reel-img" style="margin-right: -0.15em;"><span style="letter-spacing: -0.02em;">verse&nbsp;Studio</span></a></li>
+                    <li><a href="studio.html"><img src="reel-text-light.png" alt="Reel" class="footer-reel-img" style="margin-right: -0.1em;"><span style="letter-spacing: -0.03em;">verse&nbsp;Studio</span></a></li>
                 </ul>
             </div>
             
